# refgenie

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  recipes.md  refgenie.yaml  setup.py  test.yaml  test2.yaml  update-usage-docs.sh
.github/workflows/: black.yml  build-package.yml  python-publish.yml  test-integration.yml  test-refgenie-cli.yml
asset_classes/: blob.yaml  fasta.yaml
containers/: Dockerfile_refgenie  Makefile  refgenie.Dockerfile
docs/: README.md  asset_class_specification.md  asset_registry_paths.md  available_assets.md  build.md  build_output.md  changelog.md  code_snippets.md  compare.md  contributing.md  custom_assets.md  customize.md  demo_videos.md  download.md  external_assets.md  faq.md  genome_config.md  glossary.md  hello-world.md  igenomes.md  install.md  install_building_software.md  install_indexers.md  local.md  manuscripts.md  overview.md  populate.md  pull.md  recipe_specification.md  recipes.md  refgenconf.md  refgenieserver.md  remote.md  run.md  seek.md  seekr.md  servers.md  support.md  tag.md  upgrade-config.md  (+4 more)
docs/autodoc_build/: refgenconf.md
docs/jupyter_docs/: refgenconf_usage.md
docs_jupyter/: aliases.ipynb  config_upgrade_03_to_04.ipynb  hello-world.ipynb  refgenconf_usage.ipynb  tutorial.ipynb
recipes/: fasta.yaml
refgenie/: __init__.py  __main__.py  _version.py  add_assets_igenome.py  argparser.py  asset_build_packages.py  build_all_genome.py  cli.py  const.py  exceptions.py  flexible_recipes.py  helpers.py  refgenie.py  refgenie.yaml  refget.py  test_recipe.py
refgenie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
refgenie/schemas/: recipe_schema.yaml
requirements/: requirements-all.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt
src/: refgenie.py  refgenie.yaml
tests/: assert_in_file.sh  conftest.py  test_argparser.py  test_cli.py  test_exceptions.py  test_helpers.py  test_refget.py  test_registry_path.py
tests/data/: pop_test.txt  recipe_child.json  recipe_parent.json
tests/integration/: README.md  conftest.py  test_build_integration.py  test_build_map_mode.py  test_server_client.py
tests/scripts/: test-integration.sh
